--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ h2 {
   width: 50%;
   z-index: -1;
   position: fixed;
-  background-image: url(./img/bg/bgs.jpg);
+  background-image: url(./img/bgS.jpg);
   opacity: 0.9;
   background-repeat: repeat-y;
 }
